fixed dob overlapping, and login green line

--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,10 @@ body {
   overflow: hidden;
 }
 
+.react-datepicker-popper {
+  z-index: 2000 !important;
+}
+
 .react-datepicker {
   font-family: 'Poppins', sans-serif !important;
 }
